:hammer: 修改ignore、更改readme

--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,8 @@ yarn-error.log*
 # secret
 App.vue
 pages/personal-center/home.vue
-libs/constant.js
-libs/loadAMap.js
-libs/loadBMap.js
+common/libs/constant.js
+common/libs/loadAMap.js
+common/libs/loadBMap.js
 pages/lottery-forecast/home.vue
 
